sources/css/storybookPlus.scss
/* ... */
// TABLE OF CONTENT
#toc {

	width: rem( 258px );
	height: rem( 546px );
	border-bottom: rem( 1px ) solid $border-color;
	border-right: rem( 1px ) solid $border-color;
	background-color: #fff;
	float: left;
	overflow: auto;
	@include box-sizing( "border-box" );
	
	#selectable {
	    
	    width: 100%;
	    list-style: none;
    	margin: 0;
    	padding: 0;
    	overflow-x: hidden;
    	@include clear;
    	
    	li {
        	width: 100%;
        	margin: 0;
        	padding: rem( 8px ) 0;
        	cursor: pointer;
        	@include clear;
        	
        	.slideNum {
            	width: 10%;
            	padding: 0 1%;
            	text-align: right;
            	float: left;
        	}
        	
        	.title {
            	width: 86%;
            	padding: 0 1%;
            	float: left;
        	}
        	
    	}
    	
    	li:hover {
    	
        	background-color: #59a8dc;
        	color: #fff;
        	
        	.light {
            	@include opacity( 1 );
        	}
        	
        }
    	
    	.ui-selecting {
    	
        	background-color: #0099ff;
        	
        }
        
        .ui-selected {
        
        	background-color: #0099ff;
        	color: #fff;
        	
        	.light {
            	@include opacity( 1 );
        	}
        	
        }
    	
    } // #selectable
	
} // #toc

// PROFILE PANEL
#profile {

	display: none;
	position: absolute;
	width: 100%;
	height: rem( 546px );
	padding: rem( 10px );
	color: #fff;
	background-color: #fafafa;
	border: rem( 1px ) solid $border-color;
	top: rem( 30px );
	left: 0;
	@include clear;
	@include box-sizing( border-box );
	
	.photo {
	
    	width: rem( 200px );
    	height: rem( 300px );
    	margin-right: rem( 10px );
    	float: left;
    	
    	img{
        	margin: 0 auto;
        	padding: 0;
        	max-height: rem( 300px );
        	max-width: rem( 200px );
        }
        
    }
	
	.bio {
    	
    	display: inline;
    	color: #000;
    	line-height: rem( 20px );
    	overflow: auto;
    	
    	h2 {
        	margin: 0 0 rem( 14px );
    	}
    	
    }
    
    .profileCloseBtn {
    
        position: absolute;
        font-size: rem( 12px );
        line-height: rem( 12px );
        top: rem( 8px );
        right: rem( 10px );
        @include clear;
        
        a, a:link, a:visited, a:hover {
            display: block;
            padding: rem( 5px );
            text-decoration: none;
            color: #fafafa;
            background-color: #696969;
            @include border-radius( rem( 5px ) );
        }
        
    }
	
} // #profile

// DOWNLOAD BAR
#download_bar {

	width: 100%;
	margin: rem( 10px ) 0;
	text-align: right;
	@include clear;
	
	ul {
	
	    display: inline-block;
    	margin: 0 0 0 rem( 30px );
    	padding: 0;
    	list-style: none;
    	
    	li {
    	
        	display: inline-block;
        	margin-left: rem( 10px );
        	
        	a, a:visited {
            	display: block;
            	color: #818181;
            	text-decoration: none;
            	padding: rem( 5px ) rem( 10px ) rem( 5px ) rem( 8px );
            	border: #939393 solid rem( 1px );
            	background-color: #fdfdfd;
            	@include transition-property( color, border, border-color, background-color );
            	@include transition-duration( .3s );
            	@include transition-timing-function( ease-out );
        	}
        	
        	a:hover {
        	    color: #333;
            	border-color: #333;
            	background-color: #FFF;
            	@include transition-property( color, border, border-color, background-color );
            	@include transition-duration( .3s );
            	@include transition-timing-function( ease-in );
            }
        	
        }
    	
    } // ul
	
} // #download_bar

// video js
.vjs-default-skin {

    .vjs-volume-control {
        margin-left: rem( 10px ) !important;
        margin-right: rem( 20px ) !important;
    }
}

// AJAX ERROR
#errorMsg {
    
    color: #000;
	padding: 0 rem( 10px );
	
	p:first-child {
    	font-size: rem( 18px );
    	color: #f00;
	}
	
}

// NO JAVASCRIPT ERROR
noscript {

	display: block;
	margin: rem( 15px );
	
	h1 {
    	font-size: rem( 24px );
    	color: #900;
    }
    
    p {
    	font-size: rem( 16px );
    	line-height: rem( 20px );
    }
	
}

